# Naivis

./: .editorconfig  .gitignore  .gitmodules  .luarc.json  CMakeLists.txt  README.md  vcpkg.json
cmake/: FetchBinder.cmake  FetchDeps.cmake  FetchEigen3.cmake  FetchLuaOCCT.cmake  FetchLuaPackages.cmake  FetchNaiveCGL.cmake  Fetchluv.cmake  Fetchopencascade.cmake  PostInstall-Linux.cmake
example/: bnd_obb.lua  boolean_operation.lua  convex_hull_2d.lua  curve_closest_parameters.lua  draw_ghost.lua  draw_line_segment.lua  draw_nurbs.lua  draw_segment.lua  enclosing_disc.lua  interpolation.lua  nvs_uv.lua  tetrasphere.lua
lua/: naivecgl.lua  naivis.lua
lua/NaiveLib/: Util.lua
resources/: icon.rc  res.qrc
resources/icons/: make_ico.ps1
runtime/lua/: __init__.lua  naivecgl.lua  nvs.lua
runtime/lua/_meta/: Ghost.lua  NaiveApp.lua  NaiveDoc.lua  Naivis.lua  naivis.lua
src/: CMakeLists.txt  main.cpp
src/Command/: Command_AddObjects.cxx  Command_AddObjects.hxx  Command_RemoveObjects.cxx  Command_RemoveObjects.hxx  Command_ReplaceObjects.cxx  Command_ReplaceObjects.hxx  Command_TransformObjects.cxx  Command_TransformObjects.hxx
src/Document/: Document_NaiveDoc.cxx  Document_NaiveDoc.hxx
src/Ext/: Ext_Bind.hxx  Ext_Extension.cxx  Ext_Extension.hxx  Ext_Ghost.cxx  Ext_Ghost.hxx  Ext_Load.cxx  Ext_Load.hxx  Ext_Manager.cxx  Ext_Manager.hxx  Ext_NaiveApp.cxx  Ext_NaiveApp.hxx  Ext_NaiveDoc.cxx  Ext_NaiveDoc.hxx  Ext_Override.cxx  Ext_Override.hxx  Ext_Qt.cxx  Ext_Qt.hxx  Ext_Source.hxx  Ext_Util.cxx  Ext_Util.hxx
src/Ghost/: Ghost_AttrOfVector.cxx  Ghost_AttrOfVector.hxx  Ghost_Attribute.cxx  Ghost_Attribute.hxx  Ghost_Context.cxx  Ghost_Context.hxx  Ghost_Document.cxx  Ghost_Document.hxx  Ghost_Object.hxx  Ghost_ObjectType.hxx
src/IO/: IO_LogStream.cxx  IO_LogStream.hxx
src/LuaOCCT/: CMakeLists.txt  lPoly.cpp  lPoly.h  lgp.cpp  luaocct.cpp  lutil.cpp  util_curve.cpp  util_curve.h
src/Mesh/: HalfEdgeMesh_DataSource.cxx  HalfEdgeMesh_DataSource.hxx  Mesh_MeshBuilder.cxx  Mesh_MeshBuilder.hxx  Mesh_MeshVSDriver.cxx  Mesh_MeshVSDriver.hxx  Mesh_Util.cxx  Mesh_Util.hxx  XSDRAWSTLVRML_DataSource_1.cxx  XSDRAWSTLVRML_DataSource_1.hxx
src/NaiveApp/: NaiveApp_Application.cxx  NaiveApp_Application.hxx  NaiveApp_Extension.cxx  NaiveApp_Extension.hxx  NaiveApp_ExtensionMgr.cxx  NaiveApp_ExtensionMgr.hxx  NaiveApp_LogStream.cxx  NaiveApp_LogStream.hxx  NaiveApp_LuaMgr.cxx  NaiveApp_LuaMgr.hxx  NaiveApp_Settings.cxx  NaiveApp_Settings.hxx
src/NaiveDoc/: NaiveDoc_Attribute.cxx  NaiveDoc_Attribute.hxx  NaiveDoc_CmdAddObjects.cxx  NaiveDoc_CmdAddObjects.hxx  NaiveDoc_CmdDeleteObjects.cxx  NaiveDoc_CmdDeleteObjects.hxx  NaiveDoc_CmdDisplayObjects.hxx  NaiveDoc_CmdHideObjects.cxx  NaiveDoc_CmdHideObjects.hxx  NaiveDoc_CmdRemoveObjects.cxx  NaiveDoc_CmdRemoveObjects.hxx  NaiveDoc_CmdShowObjects.cxx  NaiveDoc_CmdShowObjects.hxx  NaiveDoc_Document.cxx  NaiveDoc_Document.hxx  NaiveDoc_Object.cxx  NaiveDoc_Object.hxx  NaiveDoc_ObjectInfo.cxx  NaiveDoc_ObjectInfo.hxx  NaiveDoc_ObjectTable.cxx  NaiveDoc_ObjectTable.hxx
src/Sketch/: Sketch_Command.cxx  Sketch_Command.hxx  Sketch_Manager.cxx  Sketch_Manager.hxx
src/Util/: Util_AIS.cxx  Util_AIS.hxx  Util_Mesh.cxx  Util_Mesh.hxx  Util_OCAF.cxx  Util_OCAF.hxx  Util_XCAF.cxx  Util_XCAF.hxx
src/Widget/: Widget_OcctViewer.cxx  Widget_OcctViewer.hxx  naivis.cpp  naivis.h  naivis.ui
src/cmd/: cmdRemoveObjects.cpp  cmdRemoveObjects.h  cmdReplaceObjects.cpp  cmdReplaceObjects.h  cmdTransformObjects.cpp  cmdTransformObjects.h  common.h
src/io/: documentManager.cpp  documentManager.h  logStream.h
src/mesh/: HalfEdgeMesh_DataSource.cxx  HalfEdgeMesh_DataSource.hxx  XSDRAWSTLVRML_DataSource.cxx  XSDRAWSTLVRML_DataSource.hxx  XSDRAWSTLVRML_DataSource_1.cxx  util.cpp  util.h
src/naivis/: naivis.h  naivis.ui
src/occtViewer/: occtViewer.cpp  occtViewer.h
src/widgets/: naivis.cpp  naivis.h  naivis.ui  occtViewer.cpp  occtViewer.h
visualizer/: occt.natvis
